frontend/kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: northamerica-northeast1-docker.pkg.dev/pdcp-cloud-006-cpho/cpho/frontend:main-bfa1722-1682023611 # {"$imagepolicy": "flux-system:frontend"}
        name: frontend
        resources: {}
status: {}
