frontend/kubernetes/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-virtual-service
  namespace: frontend
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/public-gateway
  http:
  - name: gateway-to-frontend
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend.frontend.svc.cluster.local
